--- a/common/src/main/resources/assets/resource_cracker/lang/de_de.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/de_de.json
@@ -49,7 +49,7 @@
 
   "item.resource_cracker.garlic": "Knoblauch",
 
-  "block.resource_cracker.garlic_crop": "Knoblauch",
+  "block.resource_cracker.garlic_crop": "Knoblauch Pflanze",
   "block.resource_cracker.steel_block": "Stahlblock",
   "block.resource_cracker.lava_spring_block": "Lavabrunnen",
   "block.resource_cracker.water_spring_block": "Wasserbrunnen",
