--- a/common/src/main/resources/assets/resource_cracker/lang/de_de.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/de_de.json
@@ -1,13 +1,11 @@
 {
-  "item-group.resource_cracker": "Resource Cracker",
+  "item_group.resource_cracker": "Resource Cracker",
 
   "item.chisel.tooltip": "Entferne Salpeter von Ziegelsteinen.",
   "item.crack_hammer.tooltip": "Verarbeite Roherze zu Staub.",
 
   "item.scythe.tooltip": "Ernte dein Feld schneller ab.",
   "item.scythe.tooltip.radius": "Aktueller Radius: ",
-
-  "attribute.resource_cracker.attack_range": "Reichweite",
 
   "item.resource_cracker.crack_hammer_copper": "Kupferhammer",
   "item.resource_cracker.crack_hammer_gold": "Goldhammer",
