project: backport to 1.20.3 and 1.20.4

--- a/common/src/main/resources/assets/resource_cracker/lang/de_de.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/de_de.json
@@ -7,6 +7,8 @@
   "item.scythe.tooltip": "Ernte dein Feld schneller ab.",
   "item.scythe.tooltip.radius": "Aktueller Radius: ",
 
+  "attribute.generic.attack_range": "Reichweite",
+
   "item.resource_cracker.crack_hammer_copper": "Kupferhammer",
   "item.resource_cracker.crack_hammer_gold": "Goldhammer",
   "item.resource_cracker.crack_hammer_iron": "Eisenhammer",
