--- a/common/src/main/resources/assets/resource_cracker/lang/en_us.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.scythe.tooltip": "Harvest Crops much faster",
   "item.scythe.tooltip.radius": "Current radius: ",
 
+  "attribute.generic.attack_range": "Attack Range",
+
   "item.resource_cracker.crack_hammer_copper": "Copper Crack Hammer",
   "item.resource_cracker.crack_hammer_gold": "Gold Crack Hammer",
   "item.resource_cracker.crack_hammer_iron": "Iron Crack Hammer",
