--- a/common/src/main/resources/assets/resource_cracker/lang/tr_tr.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/tr_tr.json
@@ -7,6 +7,8 @@
   "item.scythe.tooltip": "Ekinleri çok daha hızlı topla.",
   "item.scythe.tooltip.radius": "Şuanki alan: ",
 
+  "attribute.generic.attack_range": "Saldırı Menzili",
+
   "item.resource_cracker.crack_hammer_copper": "Bakır Parçalama Çekici",
   "item.resource_cracker.crack_hammer_gold": "Altın Parçalama Çekici",
   "item.resource_cracker.crack_hammer_iron": "Demir Parçalama Çekici",
