applying Resource Config/Library changes and adding more translations

--- a/common/src/main/resources/assets/resource_cracker/lang/de_de.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/de_de.json
@@ -52,5 +52,53 @@
   "block.resource_cracker.lava_spring_block": "Lavabrunnen",
   "block.resource_cracker.water_spring_block": "Wasserbrunnen",
 
-  "item.resource_cracker.beef_jerky": "Beef Jerky"
+  "item.resource_cracker.beef_jerky": "Beef Jerky",
+
+  "config.resource_cracker.block_mob_loot": "Loot-Config",
+  "config.resource_cracker.block_mob_loot.block_loot.label": "Block-Beutechancen",
+  "config.resource_cracker.block_mob_loot.coppernuggetfromore.label": "Kupferklumpen aus Kupfererz",
+  "config.resource_cracker.block_mob_loot.diamondnuggetfromcoalore.label": "Diamantensplitter aus Kohleerz",
+  "config.resource_cracker.block_mob_loot.diamondnuggetfromdiamondore.label": "Diamantensplitter aus Diamanterz",
+  "config.resource_cracker.block_mob_loot.emeraldnuggetfromore.label": "Smaragdsplitter aus Smaragderz",
+  "config.resource_cracker.block_mob_loot.saltpeterfrombricks.label": "Salpeter vom Ziegelsteinen",
+
+  "config.resource_cracker.block_mob_loot.mob_loot.label": "Mob-Beutechancen",
+  "config.resource_cracker.block_mob_loot.garlicfromzombie.label": "Knoblauch von Zombies",
+  "config.resource_cracker.block_mob_loot.coppernuggetfromzombie.label": "Kupferklumpen von Zombies",
+  "config.resource_cracker.block_mob_loot.sulfurfromcreeper.label": "Schwefel von Creepern",
+  "config.resource_cracker.block_mob_loot.saltpeterfromcreeper.label": "Salpeter von Creepern",
+
+  "config.resource_cracker.block_mob_loot.structure_loot.label": "Struktur-Beutechancen",
+  "config.resource_cracker.block_mob_loot.sulfur.label": "Schwefel",
+  "config.resource_cracker.block_mob_loot.saltpeter.label":"Salpeter",
+  "config.resource_cracker.block_mob_loot.copperdust.label": "Kupferstaub",
+  "config.resource_cracker.block_mob_loot.irondust.label": "Eisenstaub",
+  "config.resource_cracker.block_mob_loot.golddust.label": "Goldstaub",
+  "config.resource_cracker.block_mob_loot.carbondust.label": "Kohlestaub",
+  "config.resource_cracker.block_mob_loot.diamonddust.label": "Diamantstaub",
+  "config.resource_cracker.block_mob_loot.emeralddust.label": "Smaragdstaub",
+  "config.resource_cracker.block_mob_loot.steeldust.label": "Stahlstaub",
+  "config.resource_cracker.block_mob_loot.netheritescrapdust.label": "Netheritplattenstaub",
+  "config.resource_cracker.block_mob_loot.netheritedust.label": "Netheritstaub",
+  "config.resource_cracker.block_mob_loot.coppernugget.label": "Kupferklumpen",
+  "config.resource_cracker.block_mob_loot.diamondnugget.label": "Diamantensplitter",
+  "config.resource_cracker.block_mob_loot.emeraldnugget.label": "Smaragdsplitter",
+  "config.resource_cracker.block_mob_loot.steelingot.label": "Stahlbarren",
+  "config.resource_cracker.block_mob_loot.garlic.label": "Knoblauch",
+  "config.resource_cracker.block_mob_loot.copperhammer.label": "Kupferhammer",
+  "config.resource_cracker.block_mob_loot.ironhammer.label": "Eisenhammer",
+  "config.resource_cracker.block_mob_loot.steelhammer.label": "Stahlhammer",
+
+  "config.resource_cracker.tool_settings": "Werkzeug-Konfiguration",
+  "config.resource_cracker.tool_settings.scythe.label": "Sense",
+  "config.resource_cracker.tool_settings.scytheharvestradius.label": "Ernteradius",
+
+  "config.resource_cracker.tool_settings.crack_hammer_durability.label":"Haltbarkeit des Crack-Hammers",
+  "config.resource_cracker.tool_settings.chisel_durability.label": "Haltbarkeit des Meißels",
+  "config.resource_cracker.tool_settings.copper.label": "Kupfer",
+  "config.resource_cracker.tool_settings.gold.label":"Gold",
+  "config.resource_cracker.tool_settings.iron.label": "Eisen",
+  "config.resource_cracker.tool_settings.steel.label":"Stahl",
+  "config.resource_cracker.tool_settings.diamond.label": "Diamant",
+  "config.resource_cracker.tool_settings.netherite.label":"Netherit"
 }
