--- a/common/src/main/resources/assets/resource_cracker/lang/tr_tr.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/tr_tr.json
@@ -52,5 +52,53 @@
   "block.resource_cracker.lava_spring_block": "Lav Yayı",
   "block.resource_cracker.water_spring_block": "Su Yayı",
 
-  "item.resource_cracker.beef_jerky": "Jerky Biftek"
+  "item.resource_cracker.beef_jerky": "Jerky Biftek",
+
+  "config.resource_cracker.block_mob_loot":"Yağma Yapılandırması",
+  "config.resource_cracker.block_mob_loot.block_loot.label": "Blok Yağma Şansları",
+  "config.resource_cracker.block_mob_loot.coppernuggetfromore.label": "Bakır Cevherinden Bakır Parçası",
+  "config.resource_cracker.block_mob_loot.diamondnuggetfromcoalore.label": "Kömür Cevherinden Elmas Parçası",
+  "config.resource_cracker.block_mob_loot.diamondnuggetfromdiamondore.label": "Elmas Cevherinden Elmas Parçası",
+  "config.resource_cracker.block_mob_loot.emeraldnuggetfromore.label": "Zümrüt Cevherinden Zümrüt Parçası",
+  "config.resource_cracker.block_mob_loot.saltpeterfrombricks.label": "Tuğlalardan Potasyum Nitrat",
+
+  "config.resource_cracker.block_mob_loot.mob_loot.label": "Canavar Yağma Şansları",
+  "config.resource_cracker.block_mob_loot.garlicfromzombie.label": "Zombilerden Sarımsak",
+  "config.resource_cracker.block_mob_loot.coppernuggetfromzombie.label": "Zombilerden Bakır Parçası",
+  "config.resource_cracker.block_mob_loot.sulfurfromcreeper.label": "Creeperlardan Kükürt",
+  "config.resource_cracker.block_mob_loot.saltpeterfromcreeper.label": "Creeperlardan Potasyum Nitrat",
+
+  "config.resource_cracker.block_mob_loot.structure_loot.label": "Yapı Yağma Şansları",
+  "config.resource_cracker.block_mob_loot.sulfur.label": "Kükürt",
+  "config.resource_cracker.block_mob_loot.saltpeter.label":"Potasyum Nitrat",
+  "config.resource_cracker.block_mob_loot.copperdust.label": "Bakır Tozu",
+  "config.resource_cracker.block_mob_loot.irondust.label": "Demir Tozu",
+  "config.resource_cracker.block_mob_loot.golddust.label": "Altın Tozu",
+  "config.resource_cracker.block_mob_loot.carbondust.label": "Karbon Tozu",
+  "config.resource_cracker.block_mob_loot.diamonddust.label": "Elmas Tozu",
+  "config.resource_cracker.block_mob_loot.emeralddust.label": "Zümrüt Tozu",
+  "config.resource_cracker.block_mob_loot.steeldust.label": "Çelik Tozu",
+  "config.resource_cracker.block_mob_loot.netheritescrapdust.label": "Netherit Hurdası Tozu",
+  "config.resource_cracker.block_mob_loot.netheritedust.label": "Netherit Tozu",
+  "config.resource_cracker.block_mob_loot.coppernugget.label": "Bakır Parçası",
+  "config.resource_cracker.block_mob_loot.diamondnugget.label": "Elmas Parçası",
+  "config.resource_cracker.block_mob_loot.emeraldnugget.label": "Zümrüt Parçası",
+  "config.resource_cracker.block_mob_loot.steelingot.label": "Çelik Külçesi",
+  "config.resource_cracker.block_mob_loot.garlic.label": "Sarımsak",
+  "config.resource_cracker.block_mob_loot.copperhammer.label": "Bakır Çekiç",
+  "config.resource_cracker.block_mob_loot.ironhammer.label": "Demir Çekiç",
+  "config.resource_cracker.block_mob_loot.steelhammer.label": "Çelik Çekiç",
+
+  "config.resource_cracker.tool_settings": "Alet Yapılandırması",
+  "config.resource_cracker.tool_settings.scythe.label": "Tırpan",
+  "config.resource_cracker.tool_settings.scytheharvestradius.label": "Hasat Alanı",
+
+  "config.resource_cracker.tool_settings.crack_hammer_durability.label":"Parçalama Çekici Dayanıklılığı",
+  "config.resource_cracker.tool_settings.chisel_durability.label": "Keski Dayanıklılığı",
+  "config.resource_cracker.tool_settings.copper.label": "Bakır",
+  "config.resource_cracker.tool_settings.gold.label":"Altın",
+  "config.resource_cracker.tool_settings.iron.label": "Demir",
+  "config.resource_cracker.tool_settings.steel.label":"Çelik",
+  "config.resource_cracker.tool_settings.diamond.label": "Elmas",
+  "config.resource_cracker.tool_settings.netherite.label":"Netherit"
 }
