--- a/common/src/main/resources/assets/resource_cracker/lang/en_us.json
+++ b/common/src/main/resources/assets/resource_cracker/lang/en_us.json
@@ -52,5 +52,80 @@
   "block.resource_cracker.lava_spring_block": "Lava Spring",
   "block.resource_cracker.water_spring_block": "Water Spring",
 
-  "item.resource_cracker.beef_jerky": "Beef Jerky"
+  "item.resource_cracker.beef_jerky": "Beef Jerky",
+
+  "config.resource_cracker.block_mob_loot":"Loot Config",
+  "config.resource_cracker.block_mob_loot.block_loot.label": "Block Loot Chances",
+  "config.resource_cracker.block_mob_loot.coppernuggetfromore.label": "Copper Nugget from Copper Ore",
+  "config.resource_cracker.block_mob_loot.diamondnuggetfromcoalore.label": "Diamond Nugget from Coal Ore",
+  "config.resource_cracker.block_mob_loot.diamondnuggetfromdiamondore.label": "Diamond Nugget from Diamond Ore",
+  "config.resource_cracker.block_mob_loot.emeraldnuggetfromore.label": "Emerald Nugget from Emerald Ore",
+  "config.resource_cracker.block_mob_loot.saltpeterfrombricks.label": "Saltpeter from Bricks",
+
+  "config.resource_cracker.block_mob_loot.mob_loot.label": "Mob Loot Chances",
+  "config.resource_cracker.block_mob_loot.garlicfromzombie.label": "Garlic from Zombies",
+  "config.resource_cracker.block_mob_loot.coppernuggetfromzombie.label": "Copper Nugget from Zombie",
+  "config.resource_cracker.block_mob_loot.sulfurfromcreeper.label": "Sulfur from Creeper",
+  "config.resource_cracker.block_mob_loot.saltpeterfromcreeper.label": "Saltpeter from Creeper",
+
+  "config.resource_cracker.block_mob_loot.structure_loot.label": "Structure Loot Chances",
+  "config.resource_cracker.block_mob_loot.sulfur.label": "Sulfur",
+  "config.resource_cracker.block_mob_loot.saltpeter.label":"Saltpeter",
+  "config.resource_cracker.block_mob_loot.copperdust.label": "Copper Dust",
+  "config.resource_cracker.block_mob_loot.irondust.label": "Iron Dust",
+  "config.resource_cracker.block_mob_loot.golddust.label": "Gold Dust",
+  "config.resource_cracker.block_mob_loot.carbondust.label": "Carbon Dust",
+  "config.resource_cracker.block_mob_loot.diamonddust.label": "Diamond Dust",
+  "config.resource_cracker.block_mob_loot.emeralddust.label": "Emerald Dust",
+  "config.resource_cracker.block_mob_loot.steeldust.label": "Steel Dust",
+  "config.resource_cracker.block_mob_loot.netheritescrapdust.label": "Netherite Scrap Dust",
+  "config.resource_cracker.block_mob_loot.netheritedust.label": "Netherite Dust",
+  "config.resource_cracker.block_mob_loot.coppernugget.label": "Copper Nugget",
+  "config.resource_cracker.block_mob_loot.diamondnugget.label": "Diamond Nugget",
+  "config.resource_cracker.block_mob_loot.emeraldnugget.label": "Emerald Nugget",
+  "config.resource_cracker.block_mob_loot.steelingot.label": "Steel Ingot",
+  "config.resource_cracker.block_mob_loot.garlic.label": "Garlic",
+  "config.resource_cracker.block_mob_loot.copperhammer.label": "Copper Hammer",
+  "config.resource_cracker.block_mob_loot.ironhammer.label": "Iron Hammer",
+  "config.resource_cracker.block_mob_loot.steelhammer.label": "Steel Hammer",
+
+  "config.resource_cracker.tool_settings": "Tool Config",
+  "config.resource_cracker.tool_settings.scythe.label": "Scythe",
+  "config.resource_cracker.tool_settings.scytheharvestradius.label": "Harvest Radius",
+
+  "config.resource_cracker.tool_settings.crack_hammer_durability.label":"Crack Hammer Durability",
+  "config.resource_cracker.tool_settings.chisel_durability.label": "Chisel Durability",
+  "config.resource_cracker.tool_settings.copper.label": "Copper",
+  "config.resource_cracker.tool_settings.gold.label":"Gold",
+  "config.resource_cracker.tool_settings.iron.label": "Iron",
+  "config.resource_cracker.tool_settings.steel.label":"Steel",
+  "config.resource_cracker.tool_settings.diamond.label": "Diamond",
+  "config.resource_cracker.tool_settings.netherite.label":"Netherite",
+
+  "tag.item.c.blocks.steel": "Steel Blocks",
+
+  "tag.item.c.dusts.carbon": " Carbon Dusts",
+  "tag.item.c.dusts.coal": "Coal Dusts",
+  "tag.item.c.dusts.diamond": "Diamond Dusts",
+  "tag.item.c.dusts.emerald": "Emerald Dusts",
+  "tag.item.c.dusts.netherite": "Netherite Dusts",
+  "tag.item.c.dusts.netherite_scrap": "Netherite Scrap Dusts",
+  "tag.item.c.dusts.saltpeter": "Saltpeter",
+  "tag.item.c.dusts.sulfur": "Sulfur",
+  "tag.item.c.dusts.steel": "Steel Dusts",
+
+  "tag.item.c.foods.beef_jerky": "Beef Jerky",
+  "tag.item.c.foods.garlic": "Garlic",
+
+  "tag.item.c.ingots.steel": "Steel Ingots",
+
+  "tag.item.c.nuggets.diamond": "Diamond Nuggets",
+  "tag.item.c.nuggets.emerald": "Emerald Nuggets",
+  "tag.item.c.nuggets.copper": "Copper Nuggets",
+
+  "tag.item.c.tools.chisel": "Chisels",
+  "tag.item.c.tools.crack_hammer": "Crack Hammers",
+  "tag.item.c.tools.crack_hammer.crafting_ingredients": "Crack Hammers Crafting Ingredient",
+  "tag.item.c.tools.scythe": "Scythes",
+  "tag.item.c.tools.scythe.crafting_ingredients": "Scythes Crafting Ingredient"
 }
